added search bar

--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 body {
     margin-left: 30px;
     margin-right: 30px;
+    background-color: #ecf2f4;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 #leftContainer {
@@ -9,6 +11,7 @@ body {
     height: auto;
     outline: 2px solid black;
     float: left;
+    background-color: #ecf2f4;
 }
 #rightContainer {
     box-sizing: border-box;
@@ -23,6 +26,8 @@ body {
     width: 100%;
     height: 100px;
     outline: 2px solid orange;
+    display: flex;
+    align-items: center;
 }
 
 #loginContainer {
@@ -39,11 +44,12 @@ body {
     height: 70px;
     outline: 3px solid green;
     align-items: center;
-    padding-left: 20px;
+    /* padding-left: 20px; */
 }
 
 .weatherTitle h1 {
     font-weight: lighter;
+    margin-left: 30px;
 }
 
 #cities {
@@ -94,6 +100,7 @@ body {
     height: 80%;
     width: 70%;
     outline: 1px solid black;
+    margin-bottom: 10px;
 }
 
 .cityPic img{
@@ -280,3 +287,126 @@ p {
 .button-9:focus {
   box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
 }
+
+
+.search-box {
+position: relative;
+width: 100%;
+max-width: 330px;
+height: 60px;
+border-radius: 90px;
+margin-left: 30px;
+
+}
+.search-icon, .go-icon {
+position: absolute;
+top: 0;
+height: 60px;
+width: 86px;
+line-height: 61px;
+text-align: center;
+}
+.search-icon {
+left: 0;
+pointer-events: none;
+font-size: 1.22em;
+will-change: transform;
+transform: rotate(-45deg);
+-webkit-transform: rotate(-45deg);
+-moz-transform: rotate(-45deg);
+-o-transform: rotate(-45deg);
+transform-origin: center center;
+-webkit-transform-origin: center center;
+-moz-transform-origin: center center;
+-o-transform-origin: center center;
+transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-webkit-transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-moz-transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-o-transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+}
+.si-rotate {
+transform: rotate(0deg);
+-webkit-transform: rotate(0deg);
+-moz-transform: rotate(0deg);
+-o-transform: rotate(0deg);
+}
+.go-icon {
+right: 0;
+pointer-events: none;
+font-size: 1.38em;
+will-change: opacity;
+cursor: default;
+opacity: 0;
+transform: rotate(45deg);
+-webkit-transform: rotate(45deg);
+-moz-transform: rotate(45deg);
+-o-transform: rotate(45deg);
+transition: opacity 190ms ease-out, transform 260ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-webkit-transition: opacity 190ms ease-out, transform 260ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-moz-transition: opacity 190ms ease-out, transform 260ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-o-transition: opacity 190ms ease-out, transform 260ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+}
+.go-in {
+opacity: 1;
+pointer-events: all;
+cursor: pointer;
+transform: rotate(0);
+-webkit-transform: rotate(0);
+-moz-transform: rotate(0);
+-o-transform: rotate(0);
+transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-webkit-transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-moz-transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+-o-transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+}
+.search-border {
+display: block;
+width: 100%;
+max-width: 360px;
+height: 60px;
+}
+.border {
+fill: none;
+stroke: black;
+stroke-width: 5;
+stroke-miterlimit: 10;
+}
+.border {
+stroke-dasharray: 740;
+stroke-dashoffset: 0;
+transition: stroke-dashoffset 400ms cubic-bezier(0.600, 0.040, 0.735, 0.990);
+-webkit-transition: stroke-dashoffset 400ms cubic-bezier(0.600, 0.040, 0.735, 0.990);
+-moz-transition: stroke-dashoffset 400ms cubic-bezier(0.600, 0.040, 0.735, 0.990);
+-o-transition: stroke-dashoffset 400ms cubic-bezier(0.600, 0.040, 0.735, 0.990);
+}
+.border-searching .border {
+stroke-dasharray: 740;
+stroke-dashoffset: 459;
+transition: stroke-dashoffset 650ms cubic-bezier(0.755, 0.150, 0.205, 1.000);
+-webkit-transition: stroke-dashoffset 650ms cubic-bezier(0.755, 0.150, 0.205, 1.000);
+-moz-transition: stroke-dashoffset 650ms cubic-bezier(0.755, 0.150, 0.205, 1.000);
+-o-transition: stroke-dashoffset 650ms cubic-bezier(0.755, 0.150, 0.205, 1.000);
+}
+#search {
+font-family: 'Montserrat Alternates', sans-serif;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-radius: 90px;
+border: none;
+background: rgba(255,255,255,0);
+padding: 0 68px 0 68px;
+color: black;
+font-size: 1.32em;
+font-weight: 400;
+letter-spacing: -0.015em;
+outline: none;
+}
+#search::-webkit-input-placeholder {color: black;}
+#search::-moz-placeholder {color: black;}
+#search:-ms-input-placeholder {color: black;}
+#search:-moz-placeholder {color: black;}
+#search::-moz-selection {color: black; background: rgba(0,0,0,0.25);}
+#search::selection {color: black; background: rgba(0,0,0,0.25);}
