--- a/index.css
+++ b/index.css
@@ -5,36 +5,29 @@ body {
     font-family: 'Montserrat Alternates', sans-serif;
 }
 
+#mainContainer {
+    width: 100%;
+    min-height: 900px;
+    box-sizing: border-box;
+    /* outline: 2px solid orange; */
+}
+
 #leftContainer {
     box-sizing: border-box;
     width: 65%;
-    height: auto;
-    outline: 2px solid black;
+    min-height: 900px;
+    /* outline: 2px solid black; */
     float: left;
     background-color: #ecf2f4;
 }
-#rightContainer {
-    box-sizing: border-box;
-    float: right;
-    outline: 2px solid blue;
-    width: 35%;
-    height: 900px;
-    background-color: #add8e6;
-}
+
 #searchContainer {
     box-sizing: border-box;
     width: 100%;
     height: 100px;
-    outline: 2px solid orange;
+    /* outline: 2px solid orange; */
     display: flex;
     align-items: center;
-}
-
-#loginContainer {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100px;
-    outline: 2px solid orange;
 }
 
 .weatherTitle {
@@ -42,7 +35,7 @@ body {
     display: flex;
     width: 100%;
     height: 70px;
-    outline: 3px solid green;
+    /* outline: 3px solid green; */
     align-items: center;
     /* padding-left: 20px; */
 }
@@ -54,52 +47,37 @@ body {
 
 #cities {
     box-sizing: border-box;
-    border: 2px solid turquoise;
+    /* border: 4px solid turquoise; */
     width: 100%;
     height: 250px;
     align-items: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 1rem;
-    padding-left: 30px;
-}
-
-#todayInfo {
-    box-sizing: border-box;
-    width: 100%;
-    height: 480px;
-    border: 2px solid black;
-    text-align: center;
+    gap: 2rem;
+    padding-left: 40px;
 }
 
 #allWeatherInfo {
     width: 100%;
     height: auto;
     box-sizing: border-box;
-    outline: 2px solid red;
-}
-
-#extraTodayInfo {
-    width: 100%;
-    height: 250px;
-    box-sizing: border-box;
-    outline: 3px solid red;
+    /* outline: 2px solid red; */
 }
 
 .selectCity {
     box-sizing: border-box;
-    height: 200px;
+    height: 240px;
     width: 200px;
-    outline: 1px solid black;
+    /* outline: 1px solid black; */
     text-align: center;
 }
 
 .cityPic {
     margin: auto;
-    height: 80%;
-    width: 70%;
-    outline: 1px solid black;
+    height: 85%;
+    width: 85%;
+    /* outline: 1px solid black; */
     margin-bottom: 10px;
 }
 
@@ -115,12 +93,6 @@ body {
     height: 100%;
 }
 
-footer {
-    text-align: center;
-    justify-content: center;
-    padding: 150px;
-}
-
 #howDisplayWeather {
     width: 100%;
     height: 10%;
@@ -128,9 +100,10 @@ footer {
     display: flex;
 }
 
-h3 {
+#howDisplayWeather h3 {
     margin: 0;
-    text-align: center;
+    margin-left: 3%;
+    /* text-align: center; */
     width: 20%;
     color: #808080;
     font-size: 18px;
@@ -166,7 +139,7 @@ p {
 #sevenDayDisplay {
     width: 100%;
     height: 100%;
-    outline: 1px solid black;
+    /* outline: 1px solid black; */
 }
 
 #monthlyDisplay {
@@ -180,7 +153,7 @@ p {
     /* outline: 4px solid orange; */
     display: flex;
     align-items: center;
-    padding-left: 20px;
+    padding-left: 40px;
     padding-right: 20px;
 }
 
@@ -410,3 +383,123 @@ outline: none;
 #search:-moz-placeholder {color: black;}
 #search::-moz-selection {color: black; background: rgba(0,0,0,0.25);}
 #search::selection {color: black; background: rgba(0,0,0,0.25);}
+
+.site-footer {  
+    background-color: #26272b;  
+    padding: 45px 0 20px;  
+    font-size: 15px;  
+    line-height: 24px;  
+    color: #737373;  
+    box-shadow: 0 10px 20px rgba(0,0,0,0.5);  
+   }  
+   .site-footer hr {  
+    border-top-color: #bbb;  
+    opacity: 0.5;  
+   }  
+   .site-footer hr.small {  
+    margin: 20px 0;  
+   }  
+   .site-footer h6 {  
+    color: #fff;  
+    font-size: 16px;  
+    text-transform: uppercase;  
+    margin-top: 5px;  
+    letter-spacing: 2px;  
+   }  
+   .site-footer a {  
+    color: #737373;  
+   }  
+   .site-footer a:hover {  
+    color: #fff;  
+    text-decoration: none;  
+   }   
+   .footer-links {  
+    padding-left: 0;  
+    list-style: none;  
+   }  
+   .footer-links li {  
+    display: block;  
+   }  
+   .footer-links a {  
+    color: #737373;  
+   }  
+   .footer-links a:active,  
+   .footer-links a:focus,  
+   .footer-links a:hover {  
+    color: #fff;  
+    text-decoration: none;  
+   }   
+   .site-footer .social-icons {  
+    text-align: right;  
+   }  
+   .site-footer .social-icons a {  
+    width: 40px;  
+    height: 40px;  
+    line-height: 40px;  
+    margin-left: 6px;  
+    margin-right: 0;  
+    border-radius: 100%;  
+    background-color: #33353d;  
+   }  
+   .copyright-text {  
+    margin: 0;  
+   }  
+   @media (max-width: 991px) {  
+    .site-footer [class^="col-"] {  
+     margin-bottom: 30px;  
+    }  
+   }  
+   @media (max-width: 767px) {  
+    .site-footer {  
+     padding-bottom: 0;  
+    }  
+    .site-footer .copyright-text,  
+    .site-footer .social-icons {  
+     text-align: center;  
+    }  
+   }  
+   .social-icons {  
+    padding-left: 0;  
+    margin-bottom: 0;  
+    list-style: none;  
+   }  
+   .social-icons li {  
+    display: inline-block;  
+    margin-bottom: 4px;  
+   }   
+   .social-icons a {  
+    background-color: #eceeef;  
+    color: #818a91;  
+    font-size: 16px;  
+    display: inline-block;  
+    line-height: 44px;  
+    width: 44px;  
+    height: 44px;  
+    text-align: center;  
+    margin-right: 8px;  
+    border-radius: 100%;  
+    -webkit-transition: all 0.2s linear;  
+    -o-transition: all 0.2s linear;  
+    transition: all 0.2s linear;  
+   }  
+   .logo{  
+    color:#eb6857;  
+   }  
+   .social-icons a:active,  
+   .social-icons a:focus,  
+   .social-icons a:hover {  
+    color: #fff;  
+    background-color: #29aafe;  
+   }   
+   .social-icons a.facebook:hover {  
+    background-color: #3b5998;  
+   }  
+   .social-icons a.twitter:hover {  
+    background-color: #00aced;  
+   }  
+   .social-icons a.linkedin:hover {  
+    background-color: #007bb6;  
+   }  
+   .social-icons a.dribbble:hover {  
+    background-color: #ea4c89;  
+   }
