--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ body {
 
 #howDisplayWeather h3 {
     margin: 0;
-    margin-left: 3%;
+    margin-left: 40px;
     /* text-align: center; */
     width: 20%;
     color: #808080;
