--- a/index.css
+++ b/index.css
@@ -97,11 +97,27 @@ body {
     height: 100%;
 }
 
+#addCity {
+    top: 0;
+    box-sizing: border-box;
+    height: 160px;
+    width: 120px;
+    text-align: center;
+    outline: 1px solid black;
+    border-radius: 15px;
+    margin-bottom: 5%;
+}
+
+#addCity p {
+    font-weight: lighter;
+}
+
 #howDisplayWeather {
     width: 100%;
     height: 10%;
     box-sizing: border-box;
     display: flex;
+    /* outline: 1px solid red; */
 }
 
 #howDisplayWeather h3 {
