added temp js script to change weather display for weekly/monthly

--- a/index.css
+++ b/index.css
@@ -160,7 +160,7 @@ p {
 #sevenDayDisplay {
     width: 100%;
     height: 100%;
-    outline: 1px solid black;
+    /* outline: 1px solid black; */
 }
 
 #monthlyDisplay {
