--- a/index.css
+++ b/index.css
@@ -9,14 +9,14 @@ body {
     width: 100%;
     min-height: 900px;
     box-sizing: border-box;
-    /* outline: 2px solid orange; */
+    /* outline: 6px solid orange; */
 }
 
 #leftContainer {
     box-sizing: border-box;
     width: 65%;
     min-height: 900px;
-    /* outline: 2px solid black; */
+    /* border: 4px solid green; */
     float: left;
     background-color: #ecf2f4;
 }
@@ -103,7 +103,7 @@ body {
     height: 160px;
     width: 120px;
     text-align: center;
-    outline: 1px solid black;
+    outline: 2px solid black;
     border-radius: 15px;
     margin-bottom: 5%;
 }
