implemented Account Settings page on react app

--- a/src/pages/demo/demo-Right.css
+++ b/src/pages/demo/demo-Right.css
@@ -23,7 +23,7 @@
 #holdAccountPic {
     width: 8%;
     height: 50%;
-    /* outline: 1px solid black; */
+    outline: 1px solid black;
     margin-right: 20px;
 }
 
