--- a/src/accountsettings.css
+++ b/src/accountsettings.css
@@ -1,11 +1,11 @@
-body {
+/* body {
     font-family: 'Montserrat Alternates', sans-serif;
     background-color: #ecf2f4;
     margin-top: 4%;
     margin-right: 8%;
     margin-left: 8%;
     margin-bottom: 6%;
-}
+} */
 
 #settingsDiv {
     width: 100%;
