--- a/src/accountsettings.css
+++ b/src/accountsettings.css
@@ -20,7 +20,7 @@
 #settingsDiv {
     width: 100%;
     height: 700px;
-    background-color: white;
+    background-color: #ecf2f4;
     box-sizing: border-box;
     display: flex;
 }
