--- a/src/index.css
+++ b/src/index.css
@@ -32,11 +32,19 @@ background-color: #ecf2f4;
 font-family: 'Montserrat Alternates', sans-serif;
 }
 
+
+/* the row class is so that left and right 
+container are in sync with the heights whenever one of them resizes*/
+.row {
+  display: flex;
+}
+
 #mainContainer {
 width: 100%;
 min-height: 900px;
 box-sizing: border-box;
 /* outline: 6px solid orange; */
+/* display: flex; */
 }
 
 #leftContainer {
@@ -76,7 +84,7 @@ margin-left: 30px;
 box-sizing: border-box;
 /* border: 4px solid turquoise; */
 width: 100%;
-height: 250px;
+min-height: 250px;
 align-items: center;
 display: flex;
 flex-direction: row;
@@ -91,7 +99,8 @@ font-weight: bold;
 
 #allWeatherInfo {
 width: 100%;
-height: auto;
+/* height: auto; */
+min-height: 480px;
 box-sizing: border-box;
 position: relative;
 /* border: 3px solid red; */
