--- a/src/rightContainer.css
+++ b/src/rightContainer.css
@@ -13,7 +13,7 @@
 #loginContainer {
     box-sizing: border-box;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     /* outline: 2px solid orange; */
     display: flex;
     align-items: center;
