--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,3 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; 
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
 .clothes{
   /* border: 1px solid red; */
   display: flex;
@@ -26,8 +13,6 @@ code {
 }
 
 body {
-margin-left: 30px;
-margin-right: 30px;
 background-color: #ecf2f4;
 font-family: 'Montserrat Alternates', sans-serif;
 }
@@ -43,7 +28,7 @@ container are in sync with the heights whenever one of them resizes*/
 width: 100%;
 min-height: 900px;
 box-sizing: border-box;
-/* outline: 6px solid orange; */
+outline: 2px solid orange;
 /* display: flex; */
 }
 
