--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,7 @@ height: 85%;
 width: 85%;
 /* outline: 1px solid black; */
 margin-bottom: 10px;
+cursor: pointer;
 }
 
 .cityPic img {
@@ -130,6 +131,7 @@ text-align: center;
 outline: 2px solid black;
 border-radius: 15px;
 margin-bottom: 5%;
+cursor: pointer;
 }
 
 #addCity p {
