--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,8 @@ display: flex;
 flex-direction: row;
 flex-wrap: wrap;
 gap: 2rem;
-padding-left: 40px;
+/* padding-left: 40px; */
+position: relative;
 }
 
 #cities p {
