--- a/src/rightContainer.css
+++ b/src/rightContainer.css
@@ -64,7 +64,7 @@
 
 #currentLocation {
     color: #808080;
-    font-size: 20px;
+    font-size: 25px;
     padding-top: 10px;
     width: 100%;
     height: 15%;
@@ -78,7 +78,7 @@
     display: flex;
     align-items:center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 #extraTodayInfo {
@@ -89,7 +89,7 @@
 }
 
 #imgCurrentWeather {
-    width: 7%;
+    width: 10%;
     height: 50%;
 }
 
@@ -105,13 +105,14 @@
 
 #holdText h2 {
     margin: 0;
-    font-size: 40px;
+    font-size: 50px;
 }
 
 #holdText p {
     color: #808080;
     margin-top: 5px;
     font-weight: bold;
+    font-size: larger;
 }
 
 #weatherText {
@@ -119,7 +120,7 @@
     padding-left: 50px;
     font-size: 140px;
     color: white;
-    font-weight: lighter;
+    font-weight: light;
     /* outline: 1px solid orange; */
 }
 
