--- a/src/index.css
+++ b/src/index.css
@@ -422,7 +422,7 @@ transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.0
 display: block;
 width: 380px;
 max-width: 410px;
-height: 45px;
+height: 55px;
 border: 4px solid black;
 border-radius: 90px;
 }
@@ -612,4 +612,48 @@ background-color: #007bb6;
 
 .social-icons a.dribbble:hover {
 background-color: #ea4c89;
+}
+
+.button-box {
+	width: 130px;
+	/* margin: 35px auto; */
+  margin-left: 550px;
+	position: relative;
+	border-radius: 30px;
+	background: #fff
+}
+
+.toggle-btn {
+	padding: 10px 20px;
+	cursor: pointer;
+	background: transparent;
+	border: 0;
+	outline: none;
+	position: relative;
+	text-align: center;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+#btn {
+	left: 0;
+	top: 0;
+	position: absolute;
+	width: 70px;
+	height: 100%;
+	background: #e67e22;
+	border-radius: 30px;
+	transition: .5s;
+}
+
+@media (max-width: 1650px) {
+  .button-box {
+    margin-left: 430px;
+  }
+}
+
+@media (max-width: 1440px) {
+  .button-box {
+    margin-left: 340px;
+  }
 }
