--- a/src/index.css
+++ b/src/index.css
@@ -260,14 +260,14 @@ object-fit: contain;
 }
 
 .generalWeather {
-width: 5%;
-height: 60%;
+width: 7%;
+height: 70%;
 padding-left: 20px;
 /* outline: 1px solid red; */
 }
 
 .generalWeather img {
-object-fit: contain;
+object-fit: cover;
 width: 100%;
 height: 100%;
 }
