--- a/client/src/index.css
+++ b/client/src/index.css
@@ -267,14 +267,14 @@ object-fit: contain;
 }
 
 .generalWeather {
-width: 7%;
+width: 6%;
 height: 70%;
 padding-left: 20px;
 /* outline: 1px solid red; */
 }
 
 .generalWeather img {
-object-fit: cover;
+object-fit: contain;
 width: 100%;
 height: 100%;
 }
@@ -287,13 +287,13 @@ display: none;
 /* outline: 1px solid red; */
 width: 10%;
 height: auto;
-margin-left: 70px;
+/* margin-left: 70px; */
 display: flex;
 }
 
 .lowestTemp {
-margin-left: 7px;
-float: left;
+margin-left: 2px;
+/* float: left; */
 }
 
 .highTempContainer {
@@ -305,8 +305,16 @@ display: flex;
 }
 
 .highestTemp {
-margin-left: 7px;
-float: right;
+margin-right: 2px;
+font-weight: bold;
+/* float: right; */
+}
+
+.dailyDescription {
+  /* outline: 1px solid black; */
+  width: 15%;
+  height: auto;
+  /* text-align: center; */
 }
 
 /* CSS */
