--- a/client/src/rightContainer.css
+++ b/client/src/rightContainer.css
@@ -4,7 +4,7 @@
     /* outline: 2px solid blue; */
     width: 35%;
     height: 900px;
-    background-image: url("images/night_time.PNG");
+    /* background-image: url("images/night_time.PNG"); */
     background-size:cover;
     /* background-color: darkblue; */
     color: white;
@@ -48,8 +48,29 @@
     height: 460px;
     /* border: 4px solid orange; */
     text-align: center;
+    position: relative;
+}
+
+#innerBox {
+    position: absolute;
+    /* outline: 2px solid red; */
+    width: 80%;
+    height: 90%;
+    top: 5%;
+    left: 10%;
+    border-radius: 10%;
+    background-color: white;
+    opacity: 0.7;
+}
+
+#formattingInfo {
+    /* outline: 1px solid green; */
+    height: 100%;
+    width: 100%;
     padding-top: 10%;
     padding-bottom: 10%;
+    position: absolute;
+    text-align: center;
 }
 
 #todayDate {
@@ -62,6 +83,7 @@
 }
 
 #todayWeather {
+    color: black;
     width: 100%;
     height: 40%;
     /* outline: 2px solid red; */
@@ -72,7 +94,8 @@
 
 #currentLocation {
     /* color: #808080; */
-    font-size: 25px;
+    color: black;
+    font-size: 28px;
     padding-top: 10px;
     width: 100%;
     height: 15%;
@@ -117,6 +140,7 @@
 #holdText h2 {
     margin: 0;
     font-size: 50px;
+    color: black;
 }
 
 #holdText p {
@@ -130,7 +154,7 @@
     margin: 0;
     padding-left: 50px;
     font-size: 140px;
-    color: white;
+    /* color: white; */
     font-weight: light;
     /* outline: 1px solid orange; */
 }
