--- a/client/src/rightContainer.css
+++ b/client/src/rightContainer.css
@@ -7,7 +7,7 @@
     /* background-image: url("images/night_time.PNG"); */
     background-size:cover;
     /* background-color: darkblue; */
-    color: white;
+    color: #00000f;
 }
 
 .spaceBtwn {
@@ -60,7 +60,34 @@
     left: 10%;
     border-radius: 10%;
     background-color: white;
-    opacity: 0.7;
+    opacity: 0.6;
+}
+
+#innerBoxLower {
+    position: absolute;
+    /* outline: 2px solid red; */
+    width: 81%;
+    height: 58%;
+    top: 106%;
+    left: 2%;
+    border-bottom-right-radius: 6%;
+    border-bottom-left-radius: 6%;
+    border-top-right-radius: 6%;
+    background-color: whitesmoke;
+    opacity: 0.6;
+}
+
+#innerBoxTab {
+    position: absolute;
+    /* outline: 2px solid red; */
+    width: 45%;
+    height: 8%;
+    top: 98%;
+    left: 2%;
+    border-top-left-radius: 35%;
+    border-top-right-radius: 35%;
+    background-color: whitesmoke;
+    opacity: 0.6;
 }
 
 #formattingInfo {
@@ -143,8 +170,14 @@
     color: black;
 }
 
+#holdText h5 {
+    margin: 0;
+    font-size: 50px;
+    color: black;
+}
+
 #holdText p {
-    color: #808080;
+    color: #605959;
     margin-top: 5px;
     font-weight: bold;
     font-size: 19px;
@@ -174,12 +207,12 @@
 }
 
 .feelsText {
-    color: #808080;
+    color: #474343;
     margin-right: 20px;
 }
 
 #sunsetTime {
-    color: #808080;
+    color: #474343;
     margin-left: 20px;
 }
 
@@ -187,7 +220,7 @@
     width: 100%;
     height: auto;
     font-size: 25px;
-    color: #808080;
+    color: #474343;
 }
 
 
