--- a/client/src/index.css
+++ b/client/src/index.css
@@ -715,3 +715,41 @@ div.error {
 input.error {
     border: 1px solid var(--error);
 }
+
+#displayErrorMsg {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+}
+
+#divForCloseBtn {
+  height: 40px;
+  width: 100%;
+}
+
+#divForCloseBtn button{
+  float: right;
+  margin: 5px;
+}
+
+#homeErrorMsg {
+  height: 60px;
+  width: 100%;
+  color: white;
+  text-align: center;
+  font-size: 35px;
+}
+
+#holdCloseImg {
+  float: right;
+  width: 3%;
+  height: 90%;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+#holdCloseImg img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
