--- a/client/index.css
+++ b/client/index.css
@@ -111,7 +111,11 @@ body {
     width: 100%;
     height: 100%;
   }
-  
+
+  .cityPicActive{
+    outline: 7px solid #adc5fa;
+    }
+
   #addCity {
     top: 0;
     box-sizing: border-box;
