fixed selected city border issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,6 +107,10 @@ width: 200px;
 text-align: center;
 }
 
+.cityPicActive{
+  outline: 7px solid #adc5fa;
+}
+
 .cityPic {
 margin: auto;
 height: 85%;
