--- a/client/src/accountsettings.css
+++ b/client/src/accountsettings.css
@@ -134,3 +134,29 @@
     width: 7%;
     cursor: pointer;
 }
+
+#savedLocation {
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+#savedLocation p{
+    font-size: 15px;
+}
+
+#savedLocation input {
+    width: 20%;
+}
+
+#sliderNote {
+    font-size: 15px;
+}
+
+#updateLocationSuccess {
+    padding: 10px;
+    background: white;
+    border: 1px solid var(--primary);
+    color: var(--primary);
+    border-radius: 4px;
+    margin: 20px 0;
+}
