--- a/client/src/accountsettings.css
+++ b/client/src/accountsettings.css
@@ -42,6 +42,15 @@
     border-bottom: 2px solid gray;
     display: flex;
     cursor: pointer;
+    justify-content: center;
+    align-items: center;
+}
+
+#backHomeBtn {
+    margin-bottom: 10px;
+    outline: 2px solid black;
+    padding: 5px;
+    border-radius: 8%;
 }
 
 #logoutBtn {
