more style changes

--- a/client/src/rightContainer.css
+++ b/client/src/rightContainer.css
@@ -12,10 +12,11 @@
 
 #displayEmail {
     font-size: 20px;
-    outline: 2px solid black;
-    padding: 5px;
-    border-radius: 1%;
-    margin-right: 20%;
+    /* outline: 2px solid black; */
+    padding: 6px;
+    border-radius: 6%;
+    color: white;
+    background-color: #3E6D9C;
 }
 
 .spaceBtwn {
@@ -30,7 +31,7 @@
     box-sizing: border-box;
     width: 100%;
     min-height: 100px;
-    outline: 2px solid orange;
+    /* outline: 2px solid orange; */
     display: flex;
     align-items: center;
     justify-content: right;
@@ -39,7 +40,7 @@
 #holdAccountPic {
     width: 8%;
     height: 50%;
-    outline: 1px solid black;
+    /* outline: 1px solid black; */
     margin-right: 20px;
     cursor: pointer;
     float: right;
