--- a/client/src/rightContainer.css
+++ b/client/src/rightContainer.css
@@ -37,16 +37,15 @@
     justify-content: right;
 }
 
-#holdAccountPic {
+.holdAccountPic {
     width: 8%;
     height: 50%;
-    /* outline: 1px solid black; */
     margin-right: 20px;
     cursor: pointer;
     float: right;
 }
 
-#holdAccountPic img {
+.holdAccountPic img {
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -231,6 +230,18 @@
     height: auto;
     font-size: 25px;
     color: #474343;
+}
+
+.displayAllNotis {
+    width: 400px;
+    height: 400px;
+    background-color: white;
+    clear: both;
+    border-radius: 10%;
+    position: absolute;
+    margin-top: 1%;
+    margin-left: 9%;
+    z-index: 99999;
 }
 
 
