Add city text turns to blue when hovering

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -145,6 +145,11 @@ margin-bottom: 5%;
 cursor: pointer;
 }
 
+#addCity:hover {
+  color: #2e71de;
+  cursor: pointer;
+  }
+
 #addCity p {
 font-weight: lighter;
 }
